Prevent content overflow when a long text is exported to a file.

--- a/styles/style.css
+++ b/styles/style.css
@@ -64,7 +64,8 @@
 	#dial {
 		color: var(--color5);
 		max-height: 85vh;
-		max-width: 500px;
+		max-width: 560px;
+		overflow-y: auto;
 		padding: 10px;
 		position: absolute;
 		width: 85%;
